[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/levels/development/enviroment/death_boundary/death_boundary.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/entities/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/levels/development/demo_infinte_runner/spawn_area/spawn_area.gd" type="Script" id=4]
[ext_resource path="res://assets/music/levels/infinite_runner/Project_3.mp3" type="AudioStream" id=5]
[ext_resource path="res://scenes/levels/development/demo_infinte_runner/demo_infinite_runner.gd" type="Script" id=6]
[ext_resource path="res://scenes/levels/development/demo_infinte_runner/difficulty/difficulty.gd" type="Script" id=7]
[ext_resource path="res://scenes/levels/development/enviroment/world_enviroment/world_environment.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/particles/enviroment/infinite-runner/bit_tunnel.tscn" type="PackedScene" id=9]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 1, 0, 1 )
emission_enabled = true
emission = Color( 0, 1, 0.160784, 1 )
emission_energy = 1.91
emission_operator = 1
emission_on_uv2 = true

[sub_resource type="BoxShape" id=2]
margin = 0.525
extents = Vector3( 1, 0.1, 1 )

[node name="DemoInfiniteRunner" type="Spatial"]
script = ExtResource( 6 )

[node name="Enviroment" type="Spatial" parent="."]

[node name="Initial" type="Spatial" parent="Enviroment"]

[node name="Floor" type="RigidBody" parent="Enviroment/Initial"]
transform = Transform( 5, 0, 0, 0, 1, 0, 0, 0, 120, 0, 0, -93.2608 )
mode = 1
mass = 0.00102041
gravity_scale = 0.0
axis_lock_linear_y = true
axis_lock_angular_y = true

[node name="MeshInstance" type="MeshInstance" parent="Enviroment/Initial/Floor"]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Enviroment/Initial/Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.1, -0.003, -0.1, -0.003 )
shape = SubResource( 2 )

[node name="DeathBoundary" parent="Enviroment" instance=ExtResource( 2 )]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, -4.28409, 0 )

[node name="WorldEnvironment" parent="Enviroment" instance=ExtResource( 8 )]

[node name="BitTunnel" parent="Enviroment" instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 3, 0, 0, -225.049 )

[node name="Audio" type="Spatial" parent="."]

[node name="Music" type="Spatial" parent="Audio"]

[node name="DemoInfiniteRunnerMusic" type="AudioStreamPlayer" parent="Audio/Music"]
stream = ExtResource( 5 )
autoplay = true

[node name="Difficulty" type="Spatial" parent="."]
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="Difficulty"]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="SpawnArea" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="PlayerSpawnArea" type="Spatial" parent="SpawnArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.66331, 0 )

[node name="Player" parent="SpawnArea/PlayerSpawnArea" instance=ExtResource( 3 )]

[node name="WallSpawnArea" type="Spatial" parent="SpawnArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -258.17 )

[node name="SpawnRate" type="Timer" parent="SpawnArea/WallSpawnArea"]
process_mode = 0
wait_time = 5.0
one_shot = true

[node name="EnemyCubeSpawnArea" type="Spatial" parent="SpawnArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -252.466 )

[node name="SpawnRate" type="Timer" parent="SpawnArea/EnemyCubeSpawnArea"]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="EnemyLSpawnArea" type="Spatial" parent="SpawnArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -253.17 )

[node name="SpawnRate" type="Timer" parent="SpawnArea/EnemyLSpawnArea"]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="LongBoySpawnArea" type="Spatial" parent="SpawnArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -123.17 )

[node name="SpawnRate" type="Timer" parent="SpawnArea/LongBoySpawnArea"]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="FloorSpawnArea" type="Spatial" parent="SpawnArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -253.17 )

[node name="SpawnRate" type="Timer" parent="SpawnArea/FloorSpawnArea"]
process_mode = 0
wait_time = 0.1
one_shot = true
